--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
